welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: '(' expected but identifier found.
      if nums(i)=4
         ^arrayFront9:9: error: ';' expected but 'else' found.
  }else{
   ^